--- a/css/hero.css
+++ b/css/hero.css
@@ -11,7 +11,7 @@ h1{
 header img {
     border-radius: 231px;
     width: 300px;
-    border: 24px solid #cc0000;
+    border: 24px solid #CC0000;
 }
 
 
